gateway/1.2/modules/ROOT/pages/flex-gateway-upgrade.adoc
= Upgrading Flex Gateway
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

You can upgrade Flex Gateway as a Linux service, in a Docker container, or as a Kubernetes Ingress controller.

[cols="1a,1a,1a"]
|===
|image:install-linux-logo.png[20%,20%,xref="flex-gateway-upgrade.adoc#upgrade-as-a-linux-service"]
|image:install-docker-logo.png[25%,25%,xref="flex-gateway-upgrade.adoc#upgrade-in-a-docker-container"]
|image:install-kubernetes-logo.png[20%,20%,xref="flex-gateway-upgrade.adoc#upgrade-as-a-kubernetes-ingress-controller"]

|xref:flex-gateway-upgrade.adoc#upgrade-as-a-linux-service[Upgrade as a Linux Service]
|xref:flex-gateway-upgrade.adoc#upgrade-in-a-docker-container[Upgrade in a Docker Container]
|xref:flex-gateway-upgrade.adoc#upgrade-as-a-kubernetes-ingress-controller[Upgrade as a Kubernetes Ingress Controller]
|===

== Upgrade as a Linux Service

Flex Gateway is distributed as a standard package. Use the following steps to upgrade either to a specific version
or to the latest version.

To upgrade Flex Gateway as a Linux Service:

. Update the list of available packages:
+
[source,ssh]
----
sudo apt update
----

. Update Flex Gateway:
* To a specific version:
+
[source,ssh]
----
sudo apt --only-upgrade -y install flex-gateway=<version>
----
* To the latest version:
+
[source,ssh]
----
sudo apt --only-upgrade -y install flex-gateway
----

. Restart the services:
+
[source,ssh]
----
sudo systemctl restart flex-gateway
----

== Upgrade in a Docker Container

The docker containers are not updated, if a new version is needed then a new container with the new image version
should be created to replace the outdated one. 

The new versions of the images will be available in link:https://hub.docker.com/r/mulesoft/flex-gateway[mulesoft/flex-gateway].

== Upgrade as a Kubernetes Ingress Controller

. Update charts with the respective chart repositories:
+
[source,ssh]
----
helm repo up
----

. Upgrade the release to a new version of the Helm chart by executing the following command, replacing example information with your own:
+
[source,ssh]
----
helm upgrade -n <namespace> <release_name> flex-gateway/flex-gateway --wait
----
